<resources>
    <string name="app_name">FinalProject</string>
    <string name="sv_group_members_hint">Search for a group member</string>
    <string name="action_settings">Settings</string>
    <string name="button_login_submit">Log In</string>
    <string name="button_login_register">Register</string>
    <string name="button_login_forgot">Forgot Password</string>
    <string name="hint_name">Email or Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="retype_password">Retype Password</string>
    <string name="tv_update_title">Update Password</string>
    <string name="button_submit">Submit</string>
    <string name="title_activity_password_forgotten_display">PasswordForgottenDisplay</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="img_feeditem_content_description">Image of the event</string>
    <string name="feed_item_titledefault">Title</string>
    <string name="feeditem_descriptiondefault">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit sodales dolor in sodales. Duis</string>
    <string name="feed_item_location_default">Street Name, Num, City, State, ZipCode</string>
    <string name="feed_item_price_default">$ $ $ $</string>
    <string name="et_fragment_group_members_search">Search for Member</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iv_image_description_user_image">User Image</string>
    <string name="tv_default_text_user_name">User Name</string>
    <string name="tv_default_text_user_status">User Status</string>
    <string name="iv_default_user_image_description">User Image</string>
    <string name="tv_recyclerview_chat_user_item_group_chat_text">+5</string>
    <string name="tv_group_name">GROUP NAME</string>
    <string name="tv_group_description">GROUP DESCRIPTION</string>
    <string name="tv_forgot_password_title">Forgot Password?</string>
    <string name="tv_forgot_password_instructions">Please enter your password and follow the instructions from the registered email.</string>
    <string name="tv_forgot_password_member_email_title">Registered email</string>
    <string name="btn_forgot_password_submit">Submit</string>
    <string name="btn_forgot_password_cancel">Cancel</string>
    <string name="et_type_message">Type message</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_city">City</string>
    <string name="button_settings">Settings</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_home">Home</string>
    <string name="tv_group_list_header">Groups</string>
    <string name="tv_online_user_list_header">Online Friends</string>
    <string name="iv_group_image_content_description">Group Image</string>
    <string name="et_hint_group_name">Group Name</string>
    <string name="et_hint_group_description">Group Description</string>
    <string name="email_send">Email sent</string>
    <string name="recovery_email_sended">Email sent, please review your email to change your password</string>
    <string name="parameter_userid">userid</string>
    <string name="user_logged_in">User Logged</string>
    <string name="user_not_logged">Can\'t log user, check problems</string>
    <string name="check_email_before">Verify your email before entering</string>
    <string name="empty_values_login">There are some fields empty, please fill them before login in</string>
    <string name="empty_values_recovery_password">Please fill the email field before continue</string>
    <string name="password_different">Password and Confirm Password are different</string>
    <string name="firebase_verification_email_sent">Please check and verify your email</string>
    <string name="firebase_user_created">User created</string>
    <string name="field_confirmPassword_empty">Confirm Password is empty</string>
    <string name="field_password_empty">Field password is empty</string>
    <string name="field_city_empty">Field city is empty</string>
    <string name="field_emailAddress_empty">field email is empty</string>
    <string name="field_lastName_empty">field last name is empty</string>
    <string name="field_firstName_empty">field first name is empty</string>
    <string name="button_settings_button_image">Settings button image</string>
    <string name="button_signout_button_image">Signout button image</string>
    <string name="tv_chat_timestamp">timestamp</string>
    <string name="ib_send_button_description">Send Button</string>
    <string name="update_comment">Update Comment</string>
    <string name="parameter_user">parameter_user</string>
    <string name="parameter_group">parameter_group</string>
    <string name="error_onattach_callgroupdisplaylistener">The class must implement CallGroupDisplayListener</string>
    <string name="et_hint_event_name">Event name</string>
    <string name="et_hint_event_description">Event Description</string>
    <string name="et_hint_event_city">City</string>
    <string name="et_hint_event_location">Address</string>
    <string name="et_hint_event_date">Date</string>
    <string name="et_hint_event_price">Price</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="create_group">Create Group</string>
    <string name="add_user">Find People</string>
    <string name="create_event">Add event</string>
</resources>
