<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding">

    <TextView
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_top_bottom"
        android:text="@string/tv_forgot_password_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/margin_top_bottom"
        android:text="@string/tv_forgot_password_instructions"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password_member_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_title" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tv_forgot_password_member_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginTop="@dimen/margin_top_bottom"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/forgot_password_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_forgot_password_member_email_title"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_passwordforgotten_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="314dp"
        android:layout_marginEnd="184dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_forgot_password_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_member_email" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:text="@string/btn_forgot_password_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_passwordforgotten_submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_passwordforgotten_submit"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_member_email" />

</android.support.constraint.ConstraintLayout>
