<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePasswordActivity"
    android:paddingStart="@dimen/activity_horizontal_padding"
    android:paddingEnd="@dimen/activity_vertical_padding"
    android:paddingTop="@dimen/activity_horizontal_padding"
    android:paddingBottom="@dimen/activity_vertical_padding">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_update_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/te_button_height"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:hint="@string/retype_password"
        app:layout_constraintBottom_toTopOf="@+id/button_update_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_retype"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_update_retype"
        android:layout_width="match_parent"
        android:layout_height="@dimen/te_button_height"

        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginTop="@dimen/views_update_top_margin"
        android:hint="@string/hint_password"
        app:layout_constraintBottom_toTopOf="@+id/et_update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_update_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/te_button_height"
        android:layout_marginBottom="@dimen/views_update_bottom_margin"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_password" />

</android.support.constraint.ConstraintLayout>