<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_recyclerview_chat_user_item_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingEnd="@dimen/activity_horizontal_padding"
    android:paddingStart="@dimen/activity_horizontal_padding"
    android:background="@drawable/sv_bottom_border_grey">

    <ImageView
        android:id="@+id/iv_recyclerview_chat_user_item_user_image"
        android:contentDescription="@string/iv_default_user_image_description"
        android:layout_width="@dimen/iv_chat_user_image_square_size"
        android:layout_height="@dimen/iv_chat_user_image_square_size"
        android:layout_marginBottom="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_recyclerview_chat_user_item_user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_recyclerview_chat_user_item_user_name"
        android:layout_width="@dimen/no_dimension"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:text="@string/tv_default_text_user_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_recyclerview_chat_user_item_user_status"
        app:layout_constraintEnd_toStartOf="@id/tv_recyclerview_chat_user_item_group_chat_identifier"
        app:layout_constraintStart_toEndOf="@+id/iv_recyclerview_chat_user_item_user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_recyclerview_chat_user_item_user_status"
        android:layout_width="@dimen/no_dimension"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:text="@string/tv_default_text_user_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_recyclerview_chat_user_item_group_chat_identifier"
        app:layout_constraintStart_toEndOf="@+id/iv_recyclerview_chat_user_item_user_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_recyclerview_chat_user_item_user_name" />

    <TextView
        android:id="@+id/tv_recyclerview_chat_user_item_group_chat_identifier"
        android:layout_width="@dimen/no_dimension"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_recyclerview_chat_user_item_user_name"
        app:layout_constraintEnd_toStartOf="@+id/iv_recyclerview_chat_user_item_new_message_icon"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/iv_recyclerview_chat_user_item_new_message_icon"
        android:contentDescription="@string/iv_default_user_image_description"
        android:layout_width="@dimen/iv_chat_new_message_icon_image_square_size"
        android:layout_height="@dimen/iv_chat_new_message_icon_image_square_size"
        android:layout_marginBottom="@dimen/margin_16_dp"
        android:layout_marginEnd="@dimen/input_margin_start_to_end"
        android:layout_marginStart="@dimen/input_margin_start_to_end"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:background="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toEndOf="@+id/tv_recyclerview_chat_user_item_group_chat_identifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>



</android.support.constraint.ConstraintLayout>